<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/toolbar_code_otp_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mã xác thực (OTP) đã được gửi qua"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tin Nhắn"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="của số"
                android:textSize="14sp"
                android:paddingLeft="5dp"
                android:fontFamily="@font/roboto_regular"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:hint="@string/app_name"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edtCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edtCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/edtCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edtCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/edtCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vui lòng chờ"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:id="@+id/txtCountdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#F80000"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:hint="60"
                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:id="@+id/txtResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/gi_y_g_i_l_i_m_x_c_th_c_m_i"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_regular"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Lưu ý:"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/ki_m_tra_th_ng_b_o_c_a_zalo_nh_n_m_k_p_th_i"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:text="@string/n_u_b_n_ch_a_c_t_i_kho_n_zalo_h_y_nh_n_m_i_t_n_tr_l_i_ch_n_ph_ng_th_c_kh_c"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"/>

        <FrameLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:text="@string/verify"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>